# django-datatables

./: .gitignore  Dockerfile  MANIFEST.in  docker-compose.yaml  pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: publish.yml
django/: MANIFEST.in  manage.py  setup.py  test_data.csv  test_tallies_data.csv
django/datatable_examples/: __init__.py  admin.py  apps.py  manual.py  models.py  tests.py  urls.py  views.py
django/demo_datatables/: asgi.py  settings.py  urls.py  wsgi.py
django/examples/: admin.py  models.py  urls.py  views.py
django_datatables/: __init__.py  admin.py  apps.py  cache.py  colour_rows.py  columns.py  constants.py  datatables.py  detect_device.py  filters.py  helpers.py  includes.py  modals.py  model_def.py  models.py  reorder_datatable.py  server_side_filters.py  urls.py  utils.py  widgets.py
django_datatables/column_visibility/: mixins.py  modals.py
django_datatables/columns/: __init__.py  column_base.py  columns.py  currency.py  date_time.py  many_to_many.py  modal_columns.py
django_datatables/datatables/: __init__.py  column_initialiser.py  datatable_error.py  datatable_table.py  datatables.py  server_side.py  simple_table.py  views.py
django_datatables/downloads/: clipboard.py  excel_download.py
django_datatables/migrations/: 0001_initial.py  0002_savedstate_column_order_savedstate_column_visibility_and_more.py  0003_alter_savedstate_state.py  0004_alter_savedstate_public_alter_savedstate_state_and_more.py
django_datatables/modal_filter/: filter_fields.py  (+2 more)
tests/: conftest.py  test_datatables.py
(+122 files in other folders)
